--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIT725 Week 2 Practical</title>
+    <title>Boilerplate Page</title>
 
-    <!-- to link css file -->
+    <!-- google fonts raleway -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <!-- css link -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <h1>SIT725 Week 2 Practical</h1>
+    <!-- header is just like a div with a different name. It is mainly for convention as this header will probably be repeated in every page and will be at the top -->
+    <header class="header">
+        <!-- h1 is the biggest header class and conventionally there is only one h1 -->
+        <h1 id="name">Shahida Siddique</h1>
+        <nav id="nav_menu">
+            <!-- ul is an unordered list. ordered list will show numbers and we don't want that -->
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
+        <Button><a href="#" id="linkedin">LinkedIn</a></Button>
+    </header>
+
+    <h2>Hello! My name is Shahida</h2>
+    <p>This is my first boilerplate code for SIT725 Software Engineering</p>
 
 </body>
-
 </html>
